--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
+certifi==2019.3.9
+chardet==3.0.4
 get==2019.4.13
+idna==2.8
+numpy==1.16.3
+opencv-python==4.1.0.25
 Pillow==5.4.1
 post==2019.4.13
 public==2019.4.13
 query-string==2019.4.13
 request==2019.4.13
+requests==2.21.0
+urllib3==1.24.2
